# Kookmin-Morai-Contest

./: README.md
Lidar_pkg/: CMakeLists.txt  package.xml
Lidar_pkg/msg/: pointCloud.msg  pointinfo.msg
Lidar_pkg/src/: Lidar_code.cpp
code/: CMakeLists.txt  package.xml
code/map/: final_map3.txt  final_map3_obs.txt
code/msg/: min_idx.msg
code/src/: Mission.cpp  Path_Logger.cpp  kill_node.sh  memo
dh_pkg/: CMakeLists.txt  package.xml
dh_pkg/msg/: cam_msg.msg
dh_pkg/scripts/: dh_cam.py
local_pkg/: CMakeLists.txt  package.xml
local_pkg/msg/: PosPos.msg
local_pkg/src/: gps.cpp
wego/: CMakeLists.txt  package.xml
wego/launch/: code.launch  gmapping.launch  kookmin.launch  navigation.launch  teleop.launch
wego/maps/: map.pgm
wego/msg/: parking.msg
wego/rviz/: display.rviz  navigation.rviz  slam.rviz
wego/scripts/: navigation_oneway.py  node_kill.py  pub_odom.py
wego/src/: convert_lidar.cpp
wego_2d_nav/: CMakeLists.txt  package.xml
wego_2d_nav/launch/: amcl.launch  move_base.launch
wego_2d_nav/params/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
wego_2d_nav/scripts/: cmd_vel_to_ackermann.py
